# lvterm

./: .gitmodules  CMakeLists.txt  arm-4.9.toolchain  clean_build_dir.sh  cmake-variants.json  configure_fbdev.sh  configure_simulator.sh  lv_conf.h  print_size.py  simulator.code-workspace  size.json
drivers/: term_hal.h
drivers/display/: display.c  display.h
modules/freetype-2.13.2/: CMakeLists.txt
src/: config.c  config.h  font.c  font.h  log.c  log.h  main.c  term_io.c  term_io.h
src/widgets/terminal/: CMakeLists.txt  lv_terminal.c  lv_terminal.h  lv_terminal_private.h  vterm_utils.c  vterm_utils.h
